--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 body{
     font-family: 'Comic-Sans', cursive;
     letter-spacing: 0.5px;
     color: aquamarine;
-    background-color: #b967ff 
-    /*cursor: url("images/hakim_mouse.png"), auto;*/
+    background-color: #b967ff;
+    cursor: url("images/hakim_mouse.png"), auto;
 }
 
 .container-fluid{
@@ -27,10 +30,12 @@ a{
 }
 
 img:hover{
-    transform: rotate(360deg);
-    transition: all 0.3s ease-in-out 0s;
-    animation-iteration-count: infinite;
+    -webkit-animation:spin 1s linear infinite;
+    -moz-animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;
+    
 }
+
 
 .raper-title{
     font-size: 34px;
