--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,10 @@
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
+
+
 body{
-    font-family: 'Comic-Sans';
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
     letter-spacing: 0.5px;
     color: aquamarine;
     background-color: #b967ff;
@@ -18,7 +20,7 @@ body{
 
 .list-group-item{
     background-image: url(images/pattern_background.png)
-}
+}seb
 
 a{
     cursor: pointer;
