añadiendo colores a los botones

--- a/styles.css
+++ b/styles.css
@@ -32,17 +32,40 @@ a{
     font-weight: bold;
 }
 
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+}
+
 img:hover{
     -webkit-animation:spin 1s linear infinite;
     -moz-animation:spin 1s linear infinite;
     animation:spin 1s linear infinite;
-    
 }
 
+.play-button .btn{
+    color: #e60073
+}
+
+.download-button .btn{
+    color: chartreuse
+}
+
+
+.share-button .btn{
+    color: darkblue;
+}
 
 .raper-title{
     font-size: 34px;
     text-align: center;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+     animation: glow 1s ease-in-out infinite alternate;
 }
 
 .play-button{
